[metadata]
name = api-health
summary = Collects data about API Health for Cloud Eagle portal
description-file =
    README.rst
author = Mirantis Inc.
author-email = bpavlovic@mirantis.com
home-page = mirantis.com
license = Apache License, Version 2.0
classifier =
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5

[files]
packages =
    health

[entry_points]
console_scripts =
    health = health.main:main

[global]
setup-hooks =
    pbr.hooks.setup_hook

